<resources>
    <string name="app_name">TODO</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="register">REGISTER</string>
    <string name="password">Password</string>
    <string name="Register">SIGNUP</string>
    <string name="already_registered">Already registered?</string>
    <string name="login">Login</string>
    <string name="sign_in">SIGN IN</string>
    <string name="facebook_app_id">640796533252734</string>
    <string name="fb_login_protocol_scheme">fb640796533252734</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account?Register here!</string>
    <string name="dont_have_an_account_register_here">Dont have an account? Register here!</string>
    <string name="login_using_facebook" />
    <string name="TextView">TextView</string>
    <string name="choose_a_role">Choose a Role</string>
    <string name="choose_your_role">choose_your_role</string>
    <string name="title_activity_employee">employee</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_note">Note</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">quantity</string>
    <string name="remove_user" />
    <string name="btn_sign_out" />
    <string name="send_password_reset_email" />
    <string name="change_password" />
    <string name="change_email" />
    <string name="btn_send" />
    <string name="btn_change" />
    <string name="btn_remove" />


</resources>