<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LOGIN">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:fontFamily="@font/anton"
        android:text="@string/sign_in"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFC107"
        android:textColorLink="#4F5254"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.187" />

    <EditText
        android:id="@+id/emailId"
        android:layout_width="335dp"
        android:layout_height="55dp"
        android:layout_marginTop="58dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#174950"
        android:textColorHint="#174950"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/password"
        android:layout_width="335dp"
        android:layout_height="55dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#174950"
        android:textColorHint="#174950"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailId"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="loginact"
        android:text="@string/login"
        app:backgroundTint="#2E6C67"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.153" />


    <TextView
        android:id="@+id/registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="register"
        android:text="@string/dont_have_an_account_register_here"
        android:textColor="#174950"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn"
        app:layout_constraintVertical_bias="0.939" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/com_facebook_button_background"
        android:text="@string/com_facebook_loginview_log_in_button_continue"
        android:textColor="#FFFFFF"
        android:onClick="loginButtonActivity"
        app:layout_constraintBottom_toTopOf="@+id/registerText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn"
        app:layout_constraintVertical_bias="0.628" />

    <TextView
        android:id="@+id/fbText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextView"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/registerText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn"
        app:layout_constraintVertical_bias="0.28" />

</androidx.constraintlayout.widget.ConstraintLayout>